# tameshi-watch

./: CLAUDE.md  Cargo.toml
chart/pleme-attestation-framework/: Chart.yaml  values.yaml
chart/pleme-attestation-framework/templates/: NOTES.txt  _helpers.tpl  namespace.yaml
chart/pleme-attestation-framework/templates/tests/: test-framework.yaml
chart/tameshi-watch/: Chart.yaml  values.schema.json  values.yaml
chart/tameshi-watch/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
chart/tameshi-watch/templates/tests/: test-health.yaml
k8s-manifests/base/: kustomization.yaml  namespace.yaml
k8s-manifests/infrastructure/: kustomization.yaml
k8s-manifests/infrastructure/kanshi/: helmrelease.yaml  kustomization.yaml
k8s-manifests/infrastructure/kensa/: helmrelease.yaml  kustomization.yaml
k8s-manifests/infrastructure/sekiban/: helmrelease.yaml  kustomization.yaml
k8s-manifests/infrastructure/tameshi-watch/: helmrelease.yaml  kustomization.yaml
k8s-manifests/overlays/production/: kustomization.yaml
k8s-manifests/overlays/production/patches/: kanshi-enforce-mode.yaml  sekiban-enforce-mode.yaml
k8s-manifests/overlays/staging/: kustomization.yaml
k8s-manifests/overlays/staging/patches/: kanshi-audit-mode.yaml  sekiban-audit-mode.yaml
src/: config.rs  error.rs  event.rs  lib.rs  main.rs  pipeline.rs  state.rs
src/actions/: blast_radius.rs  mod.rs
src/sources/: mod.rs  nvd.rs  osv.rs  profile_watcher.rs
tests/: integration.rs
